tests/ui/coroutine/gen_fn.e2024.stderr
error[E0658]: gen blocks are experimental
  --> $DIR/gen_fn.rs:4:1
   |
LL | gen fn foo() {}
   | ^^^
   |
   = note: see issue #117078 <https://github.com/rust-lang/rust/issues/117078> for more information
   = help: add `#![feature(gen_blocks)]` to the crate attributes to enable

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0658`.
